Correct variable name
This space is for sticking out “to sub”.

--- a/src/css/footer/byline.css
+++ b/src/css/footer/byline.css
@@ -1,7 +1,7 @@
 .byline {
   --margin-right: 0;
 
-  margin-left: var(--space-left-sub);
+  margin-left: var(--space-to-sub);
   margin-right: var(--margin-right);
 }
 
