--- a/src/css/header/logo.css
+++ b/src/css/header/logo.css
@@ -1,5 +1,5 @@
 .logo {
   font-weight: bold;
   text-transform: uppercase;
-  margin-left: var(--space-left-sub);
+  margin-left: var(--space-to-sub);
 }
