--- a/src/css/var.css
+++ b/src/css/var.css
@@ -57,7 +57,7 @@
 
   /* Responsive */
   --font-size-root: calc(var(--base-primary) * 100%);
-  --space-left-sub: 0;
+  --space-to-sub: 0;
 
   /* Calcuratable */
   --height-1-line: calc(var(--line-height-default) * var(--font-size-default));
@@ -88,6 +88,6 @@
 @media (min-width: 71em) {
   :root {
     --font-size-root: calc(var(--base-secondary) * 100%);
-    --space-left-sub: calc(0px - var(--width-sub) - var(--width-gap) - var(--width-gap));
+    --space-to-sub: calc(0px - var(--width-sub) - var(--width-gap) - var(--width-gap));
   }
 }
